--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <a href="mailto:name@email.com">williamxyshi@gmail.com</a>
         </div>
         <img class="will-picture" src="img/face.png">
-        <p style="margin-top: 10px;"class="lead mb-5">I am a software developer as well as a student from the University of Waterloo. My interests include mobile and game development, sipping on tea, playing chess and being an armchair historian.</p>
+        <p style="margin-top: 10px;"class="lead mb-5">I am a software developer as well as a mechatronics engineering student from the University of Waterloo. I love mobile and game development, sipping on tea, playing chess and being an armchair historian.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/williamxyshi/">
             <i class="fab fa-linkedin-in"></i>
@@ -170,7 +170,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Marshal Lannes Simulator</h3>
             <div class="subheading mb-3">C++ - SDL2 - Make</div>
-            <p>Marshal Lannes Simulator is a 2D platforming game where the player plays as Napoleons best Marshal: Jean Lannes. Historically, he was killed by a cannonball when mourning the loss of a friend. In this game, the player plays as Jean Lannes as must dodge incomming cannon balls to reach the cannon to win. Built with C++ and SDL2.
+            <p>Marshal Lannes Simulator is a 2D platforming game where the player plays as Napoleons best Marshal: Jean Lannes. Historically, he was killed by a cannonball when mourning the loss of a friend. In this game, the player plays as Jean Lannes as must dodge incoming cannon balls to reach the cannon to win. Built with C++ and SDL2.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -288,7 +288,7 @@
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p>When I'm not programming or studying for school, enjoy tasting new teas, playing chess and learning about history.</p>
-        <p class="mb-0">My favourite tea is Tie Guan Yin (out of the 30+ I own), I'm quite terrible at chess (but improving (i think)) and I'm especially interested in Napoleonic history (and World War 1).</p>
+        <p class="mb-0">My favourite tea is Tie Guan Yin (out of the 30+ I own), I'm quite terrible at chess (but improving (I think)) and I'm especially interested in Napoleonic history (and World War 1).</p>
       </div>
     </section>
 
