--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <a href="mailto:name@email.com">williamxyshi@gmail.com</a>
         </div>
         <img class="will-picture" src="img/face.png">
-        <p style="margin-top: 10px;"class="lead mb-5">I am a software developer as well as a mechatronics engineering student from the University of Waterloo. I love mobile and game development, sipping on tea, playing chess and being an armchair historian.</p>
+        <p style="margin-top: 10px;"class="lead mb-5">I am a software developer as well as a mechatronics engineering student at the University of Waterloo. I love mobile and game development, sipping on tea, playing chess and being an armchair historian.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/williamxyshi/">
             <i class="fab fa-linkedin-in"></i>
