--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Tea Buddy</h3>
             <div class="subheading mb-3">Kotlin - Android - Firebase - Realm - WikiAPI</div>
-            <p>TeaBuddy is an Android app that allows users to explore the fascinating world of tea. Explore exotic teas, set brew timers to keep track of your own tea, post to the TeaWorld social media and interact with other users. Tea, user and community post data saved in Firebase and saved locally in Realm. Tea details and information pulled from the Wikipedia API with the Retrofit library. 
+            <p>TeaBuddy is an Android app that allows users to explore the fascinating world of tea. Explore exotic teas, set brew timers to keep track of your own tea, post to the TeaBuddy social media and interact with other users. Tea, user and community post data saved in Firebase and saved locally in Realm. Tea details and information pulled from the Wikipedia API with the Retrofit library. 
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -158,7 +158,7 @@
           <div class="resume-content">
             <h3 class="mb-0">tankagons.io</h3>
             <div class="subheading mb-3">Python - Pygame - Socket</div>
-            <p>tankagons is an free for all online multiplayer python game with basebuilding, fully destructable terrain and RPG elements. Features the ability to customize tanks to gain an advantage over other players as well as intelligent enemy AI with pathfinding algorithms and dynamic strategies. Learned and applied client/server logic, game design patterns and basic networking architecture.
+            <p>tankagons is an free for all online multiplayer (20 player support) python game with basebuilding, fully destructable terrain and RPG elements. Features the ability to customize tanks to gain an advantage over other players as well as intelligent enemy AI with pathfinding algorithms and dynamic strategies. Learned and applied client/server logic, game design patterns and basic networking architecture. 
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -224,6 +224,8 @@
           <li>
             Python</li>
           <li>
+            JavaScript</li>
+          <li>
             HTML/CSS</li>
 
         </ul>
@@ -287,8 +289,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>When I'm not programming or studying for school, enjoy tasting new teas, playing chess and learning about history.</p>
-        <p class="mb-0">My favourite tea is Tie Guan Yin (out of the 30+ I own), I'm quite terrible at chess (but improving (I think)) and I'm especially interested in Napoleonic history (and World War 1).</p>
+        <p>When I'm not programming or studying for school, I enjoy tasting new teas, playing chess and learning about history.</p>
+        <p class="mb-0">My favourite teas are Tie Guan Yin, LongJing and Jasmine Green (out of the 30+ I own), I'm quite terrible at chess (but improving (I think)) and I'm especially interested in Napoleonic history (and World War 1 (and Austria-Hungary)).</p>
       </div>
     </section>
 
