--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="subheading mb-3">Kotlin - Android - Flask - Python - AWS</div>
             <p>
             Wiz Auto Chess is a multiplayer mobile auto chess game set in a medieval fantasy setting.
-            Developed and deployed a Flask web application on AWS (Elastic Beanstalk). Engineered API endpoints to publish data to mobile app, as well as a web server to manage and save game data. Android app built with Kotlin, and interacts with the web server through the Retrofit library. This game is still a work in progress, and sprites/animations are the current focus. 
+            Developed and deployed a Flask web application on AWS (Elastic Beanstalk) which interfaces data stored in MongoDB Atlas. Engineered API endpoints to publish data to mobile app, as well as a web server to manage and save game data. Android app built with Kotlin, and interacts with the web server through the Retrofit library. This game is still a work in progress, and sprites/animations are the current focus. 
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -247,11 +247,12 @@
           <li>
             Google Cloud Platform</li>
           <li>
+            MongoDB/Realm/SQLite</li>
+          <li>
             Flask</li>
           <li>
             Docker</li>
-          <li>
-            Realm/SQLite</li>
+        
           <li>
             OpenGL</li>
           <li>
