linked github links to projects

--- a/index.html
+++ b/index.html
@@ -117,8 +117,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Wiz Auto Chess</h3>
-            <div class="subheading mb-3">Kotlin - Android - Flask - Python - AWS</div>
+            <h3 class="mb-0">Wiz Auto Chess
+              <a class="btn-style" href="https://github.com/williamxyshi/WizAutoChess">
+                <i class="fab fa-github"></i>
+              </a>
+            </h3>
+            <div class="subheading mb-3">Kotlin - Android - Flask - Python - AWS - MongoDB Atlas</div>
             <p>
             Wiz Auto Chess is a multiplayer mobile auto chess game set in a medieval fantasy setting.
             Developed and deployed a Flask web application on AWS (Elastic Beanstalk) which interfaces data stored in MongoDB Atlas. Engineered API endpoints to publish data to mobile app, as well as a web server to manage and save game data. Android app built with Kotlin, and interacts with the web server through the Retrofit library. This game is still a work in progress, and sprites/animations are the current focus. 
@@ -131,7 +135,10 @@
     
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Tea Buddy</h3>
+            <h3 class="mb-0">Tea Buddy
+              <a class="btn-style" href="https://github.com/williamxyshi/TeaBuddy">
+                <i class="fab fa-github"></i>
+              </a></h3>
             <div class="subheading mb-3">Kotlin - Android - Firebase - Realm - WikiAPI</div>
             <p>TeaBuddy is an Android app that allows users to explore the fascinating world of tea. Explore exotic teas, set brew timers to keep track of your own tea, post to the TeaBuddy social media and interact with other users. Tea, user and community post data saved in Firebase and saved locally in Realm. Tea details and information pulled from the Wikipedia API with the Retrofit library. 
             </p>
@@ -143,7 +150,11 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">True Shoe</h3>
+            <h3 class="mb-0">True Shoe
+            <a class="btn-style" href="https://github.com/williamxyshi/true-shoe">
+                <i class="fab fa-github"></i>
+              </a>
+            </h3>
             <div class="subheading mb-3">Flutter - Dart - OpenWeatherAPI - Firebase</div>
             <p>True Shoe is a cross platform mobile app built with Flutter that translates the weather to shoes. 
               Users can upload their shoes to firebase after authentication. Pulls current weather information based on user location with the OpenWeatherAPI, and then recommends a shoe based on the weather conditions. 
@@ -156,7 +167,11 @@
 
          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">tankagons.io</h3>
+            <h3 class="mb-0">tankagons.io
+            <a class="btn-style" href="https://github.com/williamxyshi/tankagons.io">
+                <i class="fab fa-github"></i>
+              </a>
+            </h3>
             <div class="subheading mb-3">Python - Pygame - Socket</div>
             <p>tankagons is an free for all online multiplayer (20 player support) python game with basebuilding, fully destructable terrain and RPG elements. Features the ability to customize tanks to gain an advantage over other players as well as intelligent enemy AI with pathfinding algorithms and dynamic strategies. Learned and applied client/server logic, game design patterns and basic networking architecture. 
             </p>
@@ -168,7 +183,11 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Marshal Lannes Simulator</h3>
+            <h3 class="mb-0">Marshal Lannes Simulator
+            <a class="btn-style" href="https://github.com/williamxyshi/MarshalJeanLannesSim">
+                <i class="fab fa-github"></i>
+              </a>
+            </h3>
             <div class="subheading mb-3">C++ - SDL2 - Make</div>
             <p>Marshal Lannes Simulator is a 2D platforming game where the player plays as Napoleons best Marshal: Jean Lannes. Historically, he was killed by a cannonball when mourning the loss of a friend. In this game, the player plays as Jean Lannes as must dodge incoming cannon balls to reach the cannon to win. Built with C++ and SDL2.
             </p>
@@ -191,7 +210,11 @@
 
          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Europa Universalis Remade</h3>
+            <h3 class="mb-0">Europa Universalis Remade
+            <a class="btn-style" href="https://github.com/williamxyshi/EURemade">
+                <i class="fab fa-github"></i>
+              </a>
+            </h3>
             <div class="subheading mb-3">Python - TkInter</div>
             <p>Learned and programmed in Python to recreate my favourite video game, Europa Universalis 4 myself. Independently learned, designed and then developed a video game with improvements to mechanics I didn't like in the original game
           </div>
