--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h1 class="mb-0">William
           <span class="text-primary">Shi</span>
         </h1>
-        <div style="margin-bottom: 1em !important;"class="subheading mb-5">12 Grey Oak Drive · Guelph, ON N1l1P2 · (519) 827-5978 ·
+        <div style="margin-bottom: 1em !important;"class="subheading mb-5">Guelph, ON · (519) 827-5978 ·
           <a href="mailto:name@email.com">williamxyshi@gmail.com</a>
         </div>
         <img class="will-picture" src="img/face.png">
