added google play link

--- a/index.html
+++ b/index.html
@@ -138,9 +138,14 @@
             <h3 class="mb-0">Tea Buddy
               <a class="btn-style" href="https://github.com/williamxyshi/TeaBuddy">
                 <i class="fab fa-github"></i>
-              </a></h3>
+              </a>
+              <a href="https://play.google.com/store/apps/details?id=com.willjane.teabuddy&hl=en_CA"><i class="fab fa-google-play"></i></a>
+
+            </h3>
             <div class="subheading mb-3">Kotlin - Android - Firebase - Realm - WikiAPI</div>
             <p>TeaBuddy is an Android app that allows users to explore the fascinating world of tea. Explore exotic teas, set brew timers to keep track of your own tea, post to the TeaBuddy social media and interact with other users. Tea, user and community post data saved in Firebase and saved locally in Realm. Tea details and information pulled from the Wikipedia API with the Retrofit library. 
+
+            Now available on the <a href="https://play.google.com/store/apps/details?id=com.willjane.teabuddy&hl=en_CA"> Google Play Store </a>
             </p>
           </div>
           <div class="resume-date text-md-right">
