--- a/index.html
+++ b/index.html
@@ -125,11 +125,33 @@
             <div class="subheading mb-3">Kotlin - Android - Flask - Python - AWS - MongoDB Atlas</div>
             <p>
             Wiz Auto Chess is a multiplayer mobile auto chess game set in a medieval fantasy setting.
-            Developed and deployed a Flask web application on AWS (Elastic Beanstalk) which interfaces data stored in MongoDB Atlas. Engineered API endpoints to publish data to mobile app, as well as a web server to manage and save game data. Android app built with Kotlin, and interacts with the web server through the Retrofit library. This game is still a work in progress, and sprites/animations are the current focus. 
+            Developed and deployed a Flask web application on AWS (Elastic Beanstalk) which interfaces data stored in MongoDB Atlas. 
+            Engineered API endpoints to publish data to mobile app, as well as a web server to manage and save game data. Android app built with Kotlin, and interacts with the web server through the Retrofit library. This game is still a work in progress, and sprites/animations are the current focus. 
             </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Jan 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">ShoppingList
+              <a class="btn-style" href="https://github.com/williamxyshi/ShoppingList">
+                <i class="fab fa-github"></i>
+              </a>
+            </h3>
+            <div class="subheading mb-3">Django - Python - SQLite - React - Javascript - HTML/CSS</div>
+            <p>
+            I live in a house of 7 boys, and we go through a LOT of food every single day. Because we split grocery costs, we want to look to
+            minimize the amount of food wasted, but our current food tracking system is abysmal. We have no way of tracking what everyone needs,
+            and we often forget to buy things (most recently: RICE!!!) so I decided to develop a quick communal shopping list app for the entire house.
+            I store the list using SQLite, and interface the database using Django - the frontend is built with React and accesses the Django REST API.
+            Users can view and add grocery items, and mark items as "bought".
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Jan 2019</span>
           </div>
         </div>
     
