changed shoppinglist text

--- a/index.html
+++ b/index.html
@@ -136,18 +136,18 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">ShoppingList
+            <h3 class="mb-0">ShoppingList 🍎
               <a class="btn-style" href="https://github.com/williamxyshi/ShoppingList">
                 <i class="fab fa-github"></i>
               </a>
             </h3>
-            <div class="subheading mb-3">Django - Python - SQLite - React - Javascript - HTML/CSS</div>
+            <div class="subheading mb-3">Django - Python - SQLite - React - JavaScript - Axios js</div>
             <p>
-            I live in a house of 7 boys, and we go through a LOT of food every single day. Because we split grocery costs, we want to look to
-            minimize the amount of food wasted, but our current food tracking system is abysmal. We have no way of tracking what everyone needs,
-            and we often forget to buy things (most recently: RICE!!!) so I decided to develop a quick communal shopping list app for the entire house.
-            I store the list using SQLite, and interface the database using Django - the frontend is built with React and accesses the Django REST API.
-            Users can view and add grocery items, and mark items as "bought".
+              I live in a house of 7 boys, and we frequently run out of food (Most Recently: rice, <strike> coffee</strike> ,<strike>bagels</strike>). When we do go shopping, things often get forgotten
+              (Most Recently: rice, <strike> coffee</strike> ,<strike>bagels</strike>)
+              as we have no good way of tracking what everybody needs. To combat this, I built ShoppingList to allow us to compile a communal
+              shopping list that we can all reference. The data is stored in SQLite, and is interfac ed by a Django web server. The server exposes REST API endpoints
+              which are then called by our React REST client using Axios. The frontend client allows users to view the ShoppingList, add to the ShoppingList and mark items as bought.
             </p>
           </div>
           <div class="resume-date text-md-right">
