homeserver and font color

--- a/index.html
+++ b/index.html
@@ -117,16 +117,25 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Wiz Auto Chess
-              <a class="btn-style" href="https://github.com/williamxyshi/WizAutoChess">
+            <h3 class="mb-0">🏡 Home Server
+              <a class="btn-style" href="https://github.com/williamxyshi/HomeServer">
                 <i class="fab fa-github"></i>
               </a>
             </h3>
-            <div class="subheading mb-3">Kotlin - Android - Flask - Python - AWS - MongoDB Atlas</div>
+            <div class="subheading mb-3">Django - Python - MongoDB - React (?) - JavaScript (?) - Android (?) - Kotlin (?)</div>
             <p>
-            Wiz Auto Chess is a multiplayer mobile auto chess game set in a medieval fantasy setting.
-            Developed and deployed a Flask web application on AWS (Elastic Beanstalk) which interfaces data stored in MongoDB Atlas. 
-            Engineered API endpoints to publish data to mobile app, as well as a web server to manage and save game data. Android app built with Kotlin, and interacts with the web server through the Retrofit library. This game is still a work in progress, and sprites/animations are the current focus. 
+            Home Server is kind of like my personal Google Assistant that I can mold into whatever I want. 
+            Basic features are going to include
+            setting timers, reminders, checking the weather and playing music.
+            Not much has been done so far, but I also plan on experimenting with web hooks with Discord and Slack, the Facebook Messenger, Spotify
+            GMail and Google Calender API's to help built an app that can handle my online services. Theres also opportunities to syncronize
+            with my Nanoleaf Light Panels through Nanoleaf's API. 
+            <br><br>
+            Web server backend is built with Django and MongoDB.
+            <br>
+            The front end technologies have also not been decided yet, but a web client built with React alongside an Android app built with Kotlin
+            seems like what I'm going to go with. 
+
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -136,7 +145,29 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">ShoppingList 🍎
+            <h3 class="mb-0">♚ Wiz Auto Chess 
+              <a class="btn-style" href="https://github.com/williamxyshi/WizAutoChess">
+                <i class="fab fa-github"></i>
+              </a>
+            </h3>
+            <div class="subheading mb-3">Kotlin - Android - Flask - Python - AWS - MongoDB Atlas</div>
+            <p>
+            Wiz Auto Chess is a multiplayer mobile auto chess game set in a medieval fantasy setting.
+            Developed and deployed a Flask web application on AWS (Elastic Beanstalk) which interfaces data stored in MongoDB Atlas. 
+            Engineered API endpoints to publish data to mobile app, as well as a web server to manage and save game data.
+            <br>
+            Android app built with Kotlin, and interacts with the web server through the Retrofit library. 
+            This game is still a work in progress, and sprites/animations are the current focus. 
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Jan 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">🍎 ShoppingList
               <a class="btn-style" href="https://github.com/williamxyshi/ShoppingList">
                 <i class="fab fa-github"></i>
               </a>
@@ -146,8 +177,12 @@
               I live in a house of 7 boys, and we frequently run out of food (Most Recently: rice, <strike> coffee</strike> ,<strike>bagels</strike>). When we do go shopping, things often get forgotten
               (Most Recently: rice, <strike> coffee</strike> ,<strike>bagels</strike>)
               as we have no good way of tracking what everybody needs. To combat this, I built ShoppingList to allow us to compile a communal
-              shopping list that we can all reference. The data is stored in SQLite, and is interfac ed by a Django web server. The server exposes REST API endpoints
-              which are then called by our React REST client using Axios. The frontend client allows users to view the ShoppingList, add to the ShoppingList and mark items as bought.
+              shopping list that we can all reference. The data is stored in SQLite, and is interfac ed by a Django web server. 
+              <br>
+              The server exposes REST API endpoints
+              which are then called by our React REST client using Axios. 
+              <br>
+              The frontend client allows users to view the ShoppingList, add to the ShoppingList and mark items as bought.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -157,7 +192,7 @@
     
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Tea Buddy
+            <h3 class="mb-0">🍵 Tea Buddy
               <a class="btn-style" href="https://github.com/williamxyshi/TeaBuddy">
                 <i class="fab fa-github"></i>
               </a>
