--- a/404.html
+++ b/404.html
@@ -15,14 +15,14 @@
     <meta content=" - " property="og:description">
     <!-- CSS -->
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,400,400i|Roboto+Mono:300,300i,400,400i" rel="stylesheet">
-    <link rel="stylesheet" href="https://williamxyshi.github.io/css/print.css" media="print">
-    <link rel="stylesheet" href="https://williamxyshi.github.io/css/poole.css">
-    <link rel="stylesheet" href="https://williamxyshi.github.io/css/hyde.css">
+    <link rel="stylesheet" href="/css/print.css" media="print">
+    <link rel="stylesheet" href="/css/poole.css">
+    <link rel="stylesheet" href="/css/hyde.css">
     <!-- Font-Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
     
     <!-- Customised CSS -->
-    <link rel="stylesheet" href="https://williamxyshi.github.io/css/custom.css">
+    <link rel="stylesheet" href="/css/custom.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -38,7 +38,7 @@
         <div class="sidebar">
   <div class="container text-center ">
     <div class="sidebar-about text-center">
-      <a href="https://williamxyshi.github.io/"><h1 class="brand">Will&#39;s Tea House</h1></a>
+      <a href="/"><h1 class="brand">Will&#39;s Tea House</h1></a>
       <div class="img-headshot-container">
        <img src="/me.jpg" alt="Author Image" class="center"> 
       </div>
@@ -97,7 +97,7 @@
 
         <div class="content container">
             <h1>404: Page not found</h1>
-<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="https://williamxyshi.github.io/">Head back home</a> to try finding it again.</p>
+<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="/">Head back home</a> to try finding it again.</p>
             <div class="footer">
                 
             </div>
