--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 -------------------------- official -----
 -------------------------------- site ---
 -----------------------------------------
-Welcome to my website :) Website design from <a href="https://vulfpeck.com">vulfpeck.com</a>
+Welcome to my website :) design inspired by <a href="https://vulfpeck.com">vulfpeck.com</a>
 
 Email: williamxyshi@gmail.com | Phone: +1 519 827 5978
 
