--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ EXPERIENCE
 
 	true shoe
 		- Fall 2019
-		- Flutter app the recommends 
+		- Flutter app that recommends shoes based on the weather
 		- Built with Flutter, Firebase
 	
 	tankagons.io
@@ -139,8 +139,8 @@ EXPERIENCE
 	
 	Marshal Lannes Simulator
 		- Spring 2019
-		- Play as marshal lannes and dodge cannon balls in 2D sidescroller
-		- Built with C++, SDL, CMake
+		- Play as marshal lannes and dodge cannon balls in 2D sidescrolling platformer
+		- Built with C++, SDL2, CMake
 
 2018
 	EU Remade
@@ -151,8 +151,6 @@ EXPERIENCE
 
 (c) William Shi 2021
 </pre>
-
-
 
 
 </body>
