--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ EXPERIENCE
 
 	<a href="https://www.teahouselabs.app">Tea House OCR</a>
 		- Winter 2021
-		- Public OCR REST API that currently pulls values from templates
+		- Public OCR REST API that pulls data from template key value pairs 
 		- Built with React, TailwindUI, Tesseract, OpenCV, Numpy, Flask, Nginx, AWS
 
 
