--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ Check out my work at <a href="https://teahouseapps.app">Tea House Apps</a>
 		- Managed team & business development
 		- Engineered a few apps
 
-	<a href="https://teahouseapps.app/#product">teashop.tv</a>
-		- Spring 2021 - Present
+	<a href="https://teashop.tv">teashop.tv</a>
+		- Spring 2021 - Pre sent
 		- NFT marketplace platform for content creators
 		- Built with React, Express, Nodejs, Alchemy Supernode, Pinata, Firebase, Compute Engine, Cloud SQL
 
@@ -122,7 +122,7 @@ Check out my work at <a href="https://teahouseapps.app">Tea House Apps</a>
 <b>2019</b>
 	<a href="https://play.google.com/store/apps/details?id=com.willjane.teabuddy">TeaBuddy</a>
 		- Fall 2019
-		- Tea companion Android App
+		- Tea companion + social media Android App 
 		- Built with React, Express, Nodejs, NLP.js, Heroku
 
 	<b>ANDROID DEVELOPER INTERN@Nanoleaf</b>
