--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@ Email: <a href="mailto:williamxyshi@gmail.com">williamxyshi@gmail.com</a> | Phon
 Check out my <a href="https://github.com/williamxyshi">GitHub</a>, <a href="https://www.linkedin.com/in/williamxyshi/">LinkedIn</a>, <a href="https://williamxyshi.itch.io/">itch.io</a>
 Check out my work at <a href="https://teahouseapps.app">Tea House Apps</a>
 
-<b>EXPERIENCE</b>
+<u><b>EXPERIENCE</b></u>
+=========================================
+<b>Tech I'm curious about right now:</b> GraphQL, Next.js, blockchain oracles  
+<b>Important Questions I ask myself everyday:</b> How the heck do <strike>wind mills</strike> submarines work?? and fridges too
 =========================================
 <b>2021</b>
 	<b>SOFTWARE ENGINEERING INTERN@Your Company Here</b>
@@ -66,7 +69,7 @@ Check out my work at <a href="https://teahouseapps.app">Tea House Apps</a>
 	<b>FOUNDER & PRINCIPAL DEVELOPER@TeaHouseApps</b>
 		- Dec 2020 - Pre sent
 		- Managed team & business development
-		- Engineered a few apps
+		- Design and development of products
 
 	<a href="https://teashop.tv">teashop.tv</a>
 		- Spring 2021 - Pre sent
