--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Check out my work at <a href="https://teahouseapps.app">Tea House Apps</a>
 	<a href="https://play.google.com/store/apps/details?id=com.willjane.teabuddy">TeaBuddy</a>
 		- Fall 2019
 		- Tea companion + social media Android App 
-		- Built with React, Express, Nodejs, NLP.js, Heroku
+		- Built with Android, Firebase, Realm
 
 	<b>ANDROID DEVELOPER INTERN@Nanoleaf</b>
 		- Sep 2019 - Dec 2019
