--- a/index.html
+++ b/index.html
@@ -50,15 +50,22 @@
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</b>
 Welcome to my website :) design inspired by <a href="https://vulfpeck.com">vulfpeck.com</a>
 
+<u><b>ABOUT ME</b></u>
+=========================================
 Email: <a href="mailto:williamxyshi@gmail.com">williamxyshi@gmail.com</a> | Phone: +1 519 827 5978
-
 Check out my <a href="https://github.com/williamxyshi">GitHub</a>, <a href="https://www.linkedin.com/in/williamxyshi/">LinkedIn</a>, <a href="https://williamxyshi.itch.io/">itch.io</a>
-Check out my work at <a href="https://teahouseapps.app">Tea House Apps</a>
+Check out what I'm working on at <a href="https://teahouseapps.app">TeaHouseApps</a>
+=========================================
+I'm a Engineering Student & Software Engineer
+I own an air fryer
+
+<b>Technology I'm curious/learning about right now:</b> GraphQL, Next.js, blockchain oracles
+<b>Important Questions I ask myself everyday:</b> How the heck do <strike>wind mills</strike> submarines work?? and fridges too
 
 <u><b>EXPERIENCE</b></u>
 =========================================
-<b>Tech I'm curious about right now:</b> GraphQL, Next.js, blockchain oracles  
-<b>Important Questions I ask myself everyday:</b> How the heck do <strike>wind mills</strike> submarines work?? and fridges too
+Work experiences in <b>bold</b>.
+All projects I'm not too embarrassed about (yet) are linked.
 =========================================
 <b>2021</b>
 	<b>SOFTWARE ENGINEERING INTERN@Your Company Here</b>
