--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ I'm a Engineering Student & Software Engineer
 I own an air fryer
 
 <b>Technology I'm curious/learning about right now:</b> GraphQL, Next.js, blockchain oracles
-<b>Important Questions I ask myself everyday:</b> How the heck do <strike>wind mills</strike> submarines work?? and fridges too
+<b>Important Questions I ask myself everyday:</b> How the heck do <strike>wind mills</strike> <strike>air fryers</strike> submarines work??
 
 <u><b>EXPERIENCE</b></u>
 =========================================
