--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ I own an air fryer
 
 <u><b>EXPERIENCE</b></u>
 =========================================
-Work experiences in <b>bold</b>.
-All projects I'm not too embarrassed about (yet) are linked.
+Work experiences in <b>bold</b>
+All projects I'm not too embarrassed about (yet) are linked
 =========================================
 <b>2021</b>
 	<b>SOFTWARE ENGINEERING INTERN@Your Company Here</b>
