--- a/index.html
+++ b/index.html
@@ -59,8 +59,12 @@ Check out what I'm working on at <a href="https://teahouseapps.app">TeaHouseApps
 I'm a Engineering Student & Software Engineer
 I own an air fryer
 
+<b>Favourite tea:</b> shi feng long jing
+<b>Favourite tea shop:</b> <a href="https://camellia-sinensis.com/en/">Camellia Sinensis</a>
+<b>Siblings:</b> only child
 <b>Technology I'm curious/learning about right now:</b> GraphQL, Next.js, blockchain oracles
 <b>Important Questions I ask myself everyday:</b> How the heck do <strike>wind mills</strike> <strike>air fryers</strike> submarines work??
+<b>Next game jam:</b> <a href="https://itch.io/jam/gmtk-2021">GMTK 2021</a>
 
 <u><b>EXPERIENCE</b></u>
 =========================================
@@ -81,7 +85,7 @@ All projects I'm not too embarrassed about (yet) are linked
 	<a href="https://teashop.tv">teashop.tv</a>
 		- Spring 2021 - Pre sent
 		- NFT marketplace platform for content creators
-		- Built with React, Express, Nodejs, Alchemy Supernode, Pinata, Firebase, Compute Engine, Cloud SQL
+		- Built with React, Express, Nodejs, Alchemy Supernode, web3js, Pinata, Firebase, Compute Engine, Cloud SQL
 
 	<b>SOFTWARE ENGINEERING INTERN@Flybits</b>
 		- Jan 2021 - Apr 2021
@@ -91,12 +95,12 @@ All projects I'm not too embarrassed about (yet) are linked
 		- Winter 2021
 		- Business trip employee reimbursement simplification app
 		- Personal home/small business receipt tracking app
-		- Built with React, TailwindUI, Express, Nodejs, MongoDB, AWS
+		- Built with React, TailwindUI, Express, Nodejs, MongoDB, Beanstalk, S3, Lambda
 
 	<a href="https://www.teahouselabs.app">Tea House OCR</a>
 		- Winter 2021
 		- Public OCR REST API that pulls data from template key value pairs 
-		- Built with React, TailwindUI, Tesseract, OpenCV, Numpy, Flask, Nginx, AWS
+		- Built with React, TailwindUI, Tesseract, OpenCV, Numpy, Flask, Nginx, EC2
 
 <b>2020</b>
 	<a href="https://www.gamerclub.app">GamerClub</a>
@@ -113,12 +117,23 @@ All projects I'm not too embarrassed about (yet) are linked
 		- Participated in GMTK 2020 and United Game Jams
 		- We jammed using Unity
 
+	30 Days of Flutter
+		- Summer 2020
+		- Flutter app a day for 30 days
+		- Quit after 3 days
+
 	<a href="https://www.plantdoctor.info">PlantDoctor</a>
 		- Summer 2020
 		- NLP web app that parses r/plantclinic comments to categorize and visualize treatment options for dying houseplants
 		- Heroku free tier + inefficient NLP = long wait times
 		- Built with React, Express, Nodejs, NLP.js, Heroku
-	
+		
+	<a href="https://github.com/williamxyshi/share-the-JUMPscare ">share the JUMPscare</a>
+		- Summer 2020
+		- Android app where users post jump scare time stamps to movies
+		- Learned making an app that needs users sucks
+		- Built with Android, Express, Nodejs, MongoDB
+
 	teagether
 		- Spring 2020
 		- Video chat tea parties in online rooms
@@ -127,7 +142,7 @@ All projects I'm not too embarrassed about (yet) are linked
 	WizAutoChess
 		- Winter 2020
 		- Auto chess battler with fantasy setting on mobile
-		- Built with Unity, Flask, AWS
+		- Built with Unity, Flask, Beanstalk
    
 <b>2019</b>
 	<a href="https://play.google.com/store/apps/details?id=com.willjane.teabuddy">TeaBuddy</a>
