--- a/index.html
+++ b/index.html
@@ -56,12 +56,11 @@ Email: <a href="mailto:williamxyshi@gmail.com">williamxyshi@gmail.com</a> | Phon
 Check out my <a href="https://github.com/williamxyshi">GitHub</a>, <a href="https://www.linkedin.com/in/williamxyshi/">LinkedIn</a>, <a href="https://williamxyshi.itch.io/">itch.io</a>
 Check out what I'm working on at <a href="https://teahouseapps.app">TeaHouseApps</a>
 =========================================
-I'm a Engineering Student & Software Engineer
+Engineering Student & Software Engineer
 I own an air fryer
 
 <b>Favourite tea:</b> shi feng long jing
 <b>Favourite tea shop:</b> <a href="https://camellia-sinensis.com/en/">Camellia Sinensis</a>
-<b>Siblings:</b> only child
 <b>Technology I'm curious/learning about right now:</b> GraphQL, Next.js, blockchain oracles
 <b>Important Questions I ask myself everyday:</b> How the heck do <strike>wind mills</strike> <strike>air fryers</strike> submarines work??
 <b>Next game jam:</b> <a href="https://itch.io/jam/gmtk-2021">GMTK 2021</a>
