--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@ All projects I'm not too embarrassed about (yet) are linked
 =========================================
 <b>2021</b>
 	<b>SOFTWARE ENGINEERING INTERN@Your Company Here</b>
-		- Sep 2021 - Dec 2021 OR May 2022 - Aug 2022
+		- May 2022 - Aug 2022
 		- Cool and important stuff I bet
 		- <a href="mailto:williamxyshi@gmail.com">Contact me!</a>
+	
+	<b>BACKEND ENGINEERING INTERN@Cowbell Cyber</b>
+		- Sept 2021 - Dec 2021
 
 	<b>FOUNDER & PRINCIPAL DEVELOPER@TeaHouseApps</b>
 		- Dec 2020 - Pre sent
@@ -120,6 +123,7 @@ All projects I'm not too embarrassed about (yet) are linked
 		- Summer 2020
 		- Flutter app a day for 30 days
 		- Quit after 3 days
+		- I love Flutter, I hate finishing an app a day
 
 	<a href="https://www.plantdoctor.info">PlantDoctor</a>
 		- Summer 2020
