--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ All projects I'm not too embarrassed about (yet) are linked
 		- Winter 2021
 		- Business trip employee reimbursement simplification app
 		- Personal home/small business receipt tracking app
-		- Built with React, TailwindUI, Express, Nodejs, MongoDB, Beanstalk, S3, Lambda
+		- Built with React, TailwindUI, Express, Nodejs, MongoDB, DigitalOcean, Nginx, S3, Lambda
 
 	<a href="https://www.teahouselabs.app">Tea House OCR</a>
 		- Winter 2021
