--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ All projects I'm not too embarrassed about (yet) are linked
 		- Design and development of products
 
 	<a href="https://teashop.tv">teashop.tv</a>
-		- Spring 2021 - Pre sent
+		- Spring 2021
 		- NFT marketplace platform for content creators
 		- Built with React, Express, Nodejs, Alchemy Supernode, web3js, Pinata, Firebase, Compute Engine, Cloud SQL
 
