--- a/index.html
+++ b/index.html
@@ -83,10 +83,16 @@ All projects I'm not too embarrassed about (yet) are linked
 		- Managed team & business development
 		- Design and development of products
 
+	<a href="https://twittersentimentdashboard.netlify.app/">Twitter sentiment dashboard</a>
+		- Summer 2021
+		- NLP Sentiment analysis dashboard of twitter feed
+		- Built for a coding assignment for Certik in 2 days, but they ghosted me
+		- Built with React, TailwindCSS, Express, Nodejs, Heroku
+
 	<a href="https://teashop.tv">teashop.tv</a>
 		- Spring 2021
 		- NFT marketplace platform for content creators
-		- Built with React, Express, Nodejs, Alchemy Supernode, web3js, Pinata, Firebase, Compute Engine, Cloud SQL
+		- Built with React, TailwindCSS, Express, Nodejs, Alchemy Supernode, web3js, Pinata, Firebase, Compute Engine, Cloud SQL
 
 	<b>SOFTWARE ENGINEERING INTERN@Flybits</b>
 		- Jan 2021 - Apr 2021
@@ -96,12 +102,12 @@ All projects I'm not too embarrassed about (yet) are linked
 		- Winter 2021
 		- Business trip employee reimbursement simplification app
 		- Personal home/small business receipt tracking app
-		- Built with React, TailwindUI, Express, Nodejs, MongoDB, DigitalOcean, Nginx, S3, Lambda
+		- Built with React, TailwindCSS, Express, Nodejs, MongoDB, DigitalOcean, Nginx, S3, Lambda
 
 	<a href="https://www.teahouselabs.app">Tea House OCR</a>
 		- Winter 2021
 		- Public OCR REST API that pulls data from template key value pairs 
-		- Built with React, TailwindUI, Tesseract, OpenCV, Numpy, Flask, Nginx, EC2
+		- Built with React, TailwindCSS, Tesseract, OpenCV, Numpy, Flask, Nginx, EC2
 
 <b>2020</b>
 	<a href="https://www.gamerclub.app">GamerClub</a>
