--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@ All projects I'm not too embarrassed about (yet) are linked
 	<b>BACKEND ENGINEERING INTERN@Cowbell Cyber</b>
 		- Sept 2021 - Dec 2021
 
-	<b>FOUNDER & PRINCIPAL DEVELOPER@TeaHouseApps</b>
+	<b>FOUNDER & LEAD DEVELOPER@TeaHouseApps</b>
 		- Dec 2020 - Pre sent
 		- Managed team & business development
-		- Design and development of products
+		- Techincal design and development of products
+		- EZExpenses, TeaHouseOCR, teashop.tv
 
 	<a href="https://twittersentimentdashboard.netlify.app/">Twitter sentiment dashboard</a>
 		- Summer 2021
