--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ Check out my <a href="https://github.com/williamxyshi">GitHub</a>, <a href="http
 Check out what I'm working on at <a href="https://teahouseapps.app">TeaHouseApps</a>
 =========================================
 Engineering Student & Software Engineer
+Mechatronics Engineering @ uWaterloo
 I own an air fryer
 
 <b>Favourite tea:</b> shi feng long jing
@@ -74,15 +75,18 @@ All projects I'm not too embarrassed about (yet) are linked
 		- May 2022 - Aug 2022
 		- Cool and important stuff I bet
 		- <a href="mailto:williamxyshi@gmail.com">Contact me!</a>
-	
-	<b>BACKEND ENGINEERING INTERN@Cowbell Cyber</b>
-		- Sept 2021 - Dec 2021
 
 	<b>FOUNDER & LEAD DEVELOPER@TeaHouseApps</b>
-		- Dec 2020 - Pre sent
+		- Winter 2020 - Summer 2021
 		- Managed team & business development
 		- Techincal design and development of products
 		- EZExpenses, TeaHouseOCR, teashop.tv
+
+	<a href="https://ezexpenses.app">EZExpenses</a>
+		- Winter 2020 - Summer 2021
+		- Business trip employee reimbursement simplification app
+		- Personal home/small business receipt tracking app
+		- Built with React, TailwindCSS, Express, Nodejs, MongoDB, DigitalOcean, Nginx, S3, Lambda
 
 	<a href="https://twittersentimentdashboard.netlify.app/">Twitter sentiment dashboard</a>
 		- Summer 2021
@@ -98,12 +102,6 @@ All projects I'm not too embarrassed about (yet) are linked
 	<b>SOFTWARE ENGINEERING INTERN@Flybits</b>
 		- Jan 2021 - Apr 2021
 		- Mobile SDK CE Squad
-	
-	<a href="https://ezexpenses.app">EZExpenses</a>
-		- Winter 2021
-		- Business trip employee reimbursement simplification app
-		- Personal home/small business receipt tracking app
-		- Built with React, TailwindCSS, Express, Nodejs, MongoDB, DigitalOcean, Nginx, S3, Lambda
 
 	<a href="https://www.teahouselabs.app">Tea House OCR</a>
 		- Winter 2021
