--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@ All projects I'm not too embarrassed about (yet) are linked
 		- Cool and important stuff I bet
 		- <a href="mailto:williamxyshi@gmail.com">Contact me!</a>
 
+	<b>ENGINEERING@Paq</b>
+		- Summer 2021 - Present
+		- Project + product
+
 	<b>FOUNDER & LEAD DEVELOPER@TeaHouseApps</b>
 		- Winter 2020 - Summer 2021
 		- Managed team & business development
