--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ All projects I'm not too embarrassed about (yet) are linked
 	<a href="https://www.gamerclub.app">GamerClub</a>
 		- Fall 2020
 		- Book clubs for video games
+		- Went semi - viral on Reddit and acquired a bunch of users during the first month (pretty much no one used it twice)
 		- Built with React, Express, Nodejs, MongoDB, Heroku
 	
 	<b>ANDROID DEVELOPER INTERN@Accedo.tv</b>
